<resources>
    <string name="app_name">Run</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="descripcionLogo">Logo Run</string>
    <string name="login">Login</string>
    <string name="forgetPassword">Forgot Password</string>
    <string name="rememberMe">Remember Me</string>
    <string name="name">Name</string>
    <string name="lastName">Last Name</string>
    <string name="phone">Phone</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="alreadyHaveAnAccount">Already Have an Account? </string>
    <string name="acceptPolicies">I accept the policies</string>
    <string name="dontAccount">Dont Have an Acoount? </string>
    <string name="signUp">SignUp</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="prefs_file">com.example.run.PREFERENCE_FILE_KEY</string>
    <string name="passwordCharacter">The password must have more than 8 characters, at least one digit, at least one lowercase and at least one uppercase. \n It can NOT have other symbols. </string>
    <string name="wrongEmail">Wrong email</string>
    <string name="emptyField">All fields are required</string>
    <string name="wrongEmailPassword">Wrong email or password</string>
    <string name="passwordSame">Passwords must be the same</string>
    <string name="writeName">Write your name</string>
    <string name="writeLastName">Write your last name</string>
    <string name="writePhone">Write your phone</string>
    <string name="acceptPolicies1">Accept the policies</string>
    <string name="emailRegistered">The email is already registered</string>
    <string name="successfulRegistration">Successful registration</string>
    <string name="verifymail">Error verifying mail</string>
    <string name="forgotPassword">Forgot Your</string>
    <string name="forgotPassword2">Password?</string>
    <string name="yourEmail">Type Your Email</string>
    <string name="send">Send</string>
    <string name="default_web_client_id_auth">38474448794-b9sek0vs3gd1lg6k38cgkuf73dohdplc.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="privacy_policy">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui
        dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore,
        cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."</string>
    <string name="ok">OK</string>
    <string name="preferences">Preferences</string>
    <string name="info_user">User Data</string>
    <string name="logout">Logout</string>
    <string name="title_home">Home</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>