<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/op1Nav"
            android:icon="@android:drawable/ic_menu_manage"
            android:iconTint="@color/orange"
            android:title="@string/preferences"
            app:showAsAction="never"/>
        <item
            android:id="@+id/op3Nav"
            android:icon="@drawable/ic_person"
            android:iconTint="@color/orange"
            android:title="@string/info_user"
            app:showAsAction="never"
            />
    </group>

    <item
        android:id="@+id/op2Nav"
        android:icon="@drawable/ic_singout"
        android:iconTint="@color/white"
        android:title="@string/logout"
        app:showAsAction="always"
        />

</menu>