<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1"
    android:background="@drawable/orange"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageLoginLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/descripcionLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo_blanco" />

    <EditText
        android:id="@+id/editTextLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/button_rounded_border"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLoginRun" />

    <EditText
        android:id="@+id/editTextLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="password"
        android:background="@drawable/button_rounded_border"
        android:drawableLeft="@drawable/ic_security"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginEmail" />

    <Button
        android:id="@+id/buttonLoginLogin"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_rounded"
        android:text="@string/login"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLoginForgot" />

    <ImageView
        android:id="@+id/imageLoginRun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLoginLogo"
        app:srcCompat="@drawable/run" />

    <TextView
        android:id="@+id/textViewLoginForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/forgetPassword"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginPassword" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoginLogin"
        tools:layout_editor_absoluteX="32dp">


        <TextView
            android:id="@+id/textViewLoginDontAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dontAccount"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textViewLoginSignUp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/signUp"
            android:textColor="@color/white"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonLoginGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_rounded"
        android:drawableLeft="@drawable/ic_google"
        android:drawablePadding="10dp"
        android:paddingLeft="20dp"
        android:text="@string/google"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonLoginFacebook"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.11" />

    <Button
        android:id="@+id/buttonLoginFacebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_rounded"
        android:drawableLeft="@drawable/ic_facebook"
        android:drawablePadding="10dp"
        android:paddingLeft="20dp"
        android:text="@string/facebook"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        app:layout_constraintBottom_toBottomOf="@+id/buttonLoginGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonLoginGoogle"
        app:layout_constraintTop_toTopOf="@+id/buttonLoginGoogle"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>