<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/orange"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textViewRegisterRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewRegisterLogo" />

    <ImageView
        android:id="@+id/imageViewRegisterLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_blanco" />

    <EditText
        android:id="@+id/editTextRegisterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="name"
        android:background="@drawable/button_rounded_border"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegisterRegister" />

    <EditText
        android:id="@+id/editTextRegisterLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="name"
        android:background="@drawable/button_rounded_border"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterName" />

    <EditText
        android:id="@+id/editTextRegisterPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="phone"
        android:background="@drawable/button_rounded_border"
        android:drawableLeft="@drawable/ic_phone"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterLastName" />

    <EditText
        android:id="@+id/editTextRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/button_rounded_border"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterPhone" />

    <EditText
        android:id="@+id/editTextRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="password"
        android:background="@drawable/button_rounded_border"
        android:drawableLeft="@drawable/ic_security"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterEmail" />

    <EditText
        android:id="@+id/editTextRegisterConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="password"
        android:background="@drawable/button_rounded_border"
        android:drawableLeft="@drawable/ic_security"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterPassword" />

    <Button
        android:id="@+id/buttonRegisterRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_rounded"
        android:text="@string/register"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRegisterPolitics" />

    <CheckBox
        android:id="@+id/checkBoxRegisterPolitics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/acceptPolicies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterConfirmPassword" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegisterRegister"
        tools:layout_editor_absoluteX="25dp">

        <TextView
            android:id="@+id/textViewRegisterAlreadyHave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alreadyHaveAnAccount"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewRegisterLogin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>